# node-blue-node-crestron-serial

./: CMakeLists.txt  crestron-serial-in.hni  crestron-serial-out.hni  crestron-serial-port.hni  package.json
crestron-serial-in/: CrestronSerialIn.cpp  CrestronSerialIn.h  Factory.cpp  Factory.h
crestron-serial-out/: CrestronSerialOut.cpp  CrestronSerialOut.h  Factory.cpp  Factory.h
crestron-serial-port/: CrestronSerialPort.cpp  CrestronSerialPort.h  Factory.cpp  Factory.h
locales/de-DE/: crestron-serial.json
